...
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@id/planeIcon"
            app:layout_constraintStart_toEndOf="@id/airlineLogo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/originText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="Toronto"
            android:textSize="16sp"
...
